# mcp-otzaria-server

./: .gitignore  README.md  pyproject.toml
src/jewish_library/: server.py  tantivy_search_agent.py
