[project]
name = "jewish_library"
version = "0.1.0"
description = "the jewish library, accessible to LLMs "
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.1.1",
    "tantivy"
]

[build-system]
requires = [ "hatchling"]
build-backend = "hatchling.build"

[project.scripts]
jewish_library = "jewish_library:main"

